# yadro_test_task

./: CMakeLists.txt  config.yaml  gen_certs.sh  readme.md  start_daemons.sh  stop_daemons.sh
deploy/: node_a.service.in  node_b.service.in  server.service.in
general/: general.cpp  general.h
node_a/: CMakeLists.txt  emulator.cpp  emulator.h  main.cpp  node_a.cpp  node_a.h
node_b/: CMakeLists.txt  main.cpp  node_b.cpp  node_b.h
proto/: accel.proto
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
